Connected backend to mongodb

--- a/Back-end/movies/src/main/resources/application.properties
+++ b/Back-end/movies/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.database=movies-api-db
+spring.data.mongodb.uri=mongodb+srv://jlbasilio55:6ZC0F3aaNdcQJBc1@cluster0.owd3k6f.mongodb.net
